[package]
name = "bunner_shield_rs"
version = "0.1.0"
edition = "2024"
license = "LICENSE.md"
description = "A lightweight HTTP security core library for Rust"
repository = "https://github.com/parkrevil/bunner-shield-rs"
documentation = "https://github.com/parkrevil/bunner-shield-rs"
homepage = "https://github.com/parkrevil/bunner-shield-rs"
keywords = ["shield", "defender", "http", "web", "security", "middleware"]
categories = ["web-programming", "network-programming"]
authors = ["parkrevil"]
readme = "README.md"

[dependencies]
thiserror = "2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
