[package]
name = "bunner_shield_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight HTTP security core library for Rust"
repository = "https://github.com/parkrevil/bunner-shield-rs"
documentation = "https://github.com/parkrevil/bunner-shield-rs"
homepage = "https://github.com/parkrevil/bunner-shield-rs"
keywords = ["shield", "defender", "http", "web", "security", "middleware"]
categories = ["web-programming", "network-programming"]
authors = ["parkrevil"]
readme = "README.md"

[dependencies]
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
url = "2"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
proptest = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
